--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -1,12 +1,14 @@
-{% load cms_tags sekizai_tags %}
+{% load cms_tags sekizai_tags static %}
 <!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Semcomp</title>
 		{% render_block "css" %}
 		{% addtoblock "css" %}
 			<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+			<link rel="stylesheet" href="{% static "css/main.css" %}">
 		{% endaddtoblock %}
 	</head>
 	<body>
