--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -7,26 +7,69 @@
 		<title>Semcomp</title>
 		{% render_block "css" %}
 		{% addtoblock "css" %}
-			<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
-			<link rel="stylesheet" href="{% static "css/main.css" %}">
+			<link rel="stylesheet" href="{% static "css/app.css" %}">
 		{% endaddtoblock %}
 	</head>
 	<body>
 		{% cms_toolbar %}
-		<div>
-			<div class="pure-menu pure-menu-open pure-menu-horizontal">
-				<a class="pure-menu-heading" href="{% page_url "home" %}">Semcomp</a>
-				<ul>
-					<li class="pure-menu-selected"><a href="{% page_url "home" %}">Home</a></li>
+		<nav class="top-bar">
+			<ul class="title-area">
+				<li class="name">
+					<h1><a href="{% page_url "home" %}">Semcomp</a></h1>
+				</li>
+				<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+			</ul>
+			<section class="top-bar-section">
+				<ul class="left">
+					<li class="divider"></li>
+					<li class="active"><a href="{% page_url "home" %}">Home</a></li>
 					<li><a href="">Evento</a></li>
 					<li><a href="">Programação</a></li>
 					<li><a href="">Contato</a></li>
 				</ul>
+			</section>
+		</nav>
+		
+		<div class="row">
+			<div class="large-6 columns">
+				{% placeholder base_content %}
 			</div>
-
-		{% placeholder base_content %}
-		{% block base_content %}{% endblock %}
+			<div class="large-6 columns">
+				{% block base_content %}{% endblock %}
+			</div>
 		</div>
 		{% render_block "js" %}
+		{% addtoblock "js" %}
+			<script src="{% static "js/vendor/custom.modernizr.js" %}"></script>
+			<script>
+				document.write(
+					'<script src=' +
+					('__proto__' in {} ?
+						'{% static "js/vendor/zepto" %}' :
+						'{% static "js/vendor/jquery" %}') +
+					'.js><\/script>');
+			</script>
+
+			<script src="{% static "js/foundation/foundation.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.tooltips.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.alerts.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.orbit.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.clearing.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.dropdown.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.joyride.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.section.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.placeholder.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.cookie.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.reveal.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.topbar.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.magellan.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.forms.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.abide.js" %}"></script>
+			<script src="{% static "js/foundation/foundation.interchange.js" %}"></script>
+
+			<script>
+				$(document).foundation();
+			</script>
+		{% endaddtoblock %}
 	</body>
 </html>
