--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -54,3 +54,14 @@
 // @import "foundation/components/tooltips";
 // @import "foundation/components/dropdown";
 
+.hero {
+	background-color: #fab;
+	padding: 20px;
+	margin: 20px 0;
+}
+
+.sponsor {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
