--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -20,11 +20,8 @@
 		<div class="large-4 columns">
 			{% placeholder side_content %}
 		</div>
-		<div class="large-4 columns">
-			{% placeholder main_content_1 %}
-		</div>
-		<div class="large-4 columns">
-			{% placeholder main_content_2 %}
+		<div class="large-8 columns">
+			{% placeholder main_content %}
 		</div>
 	</div>
 {% endblock %}
