conteúdo especial pra situações especiais

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -17,6 +17,12 @@
 
 {% block base_content %}
 	<div class="row">
+		<div class="large-12">
+			{% placeholder special_content %}
+		</div>
+	</div>
+
+	<div class="row">
 		<div class="large-4 columns">
 			{% placeholder side_content %}
 		</div>
