--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Semcomp</title>
-		{% render_block "css" %}
+		{% render_block "css" postprocessor "compressor.contrib.sekizai.compress" %}
 		{% addtoblock "css" %}
 			<link rel="stylesheet" href="{% static "css/app.css" %}">
 		{% endaddtoblock %}
@@ -67,7 +67,7 @@
 					'{% static "js/vendor/jquery" %}') +
 				'.js><\/script>');
 		</script>
-		{% render_block "js" %}
+		{% render_block "js" postprocessor "compressor.contrib.sekizai.compress" %}
 		{% addtoblock "js" %}
 			<script src="{% static "js/vendor/custom.modernizr.js" %}"></script>
 
