--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -1,11 +1,14 @@
 
-//$topbar-bg: rgba(white, 0.0);
-$topbar-margin-bottom: 20px;
-$body-bg: image-url('new-pattern.png');
-//$topbar-dropdown-bg: rgba(white, 0.0);
-
 // Global Foundation Settings
 @import "settings";
+
+//$topbar-bg: rgba(white, 0.0);
+$topbar-margin-bottom: 20px;
+//$body-bg: image-url('new-pattern.png');
+//$topbar-dropdown-bg: rgba(white, 0.0);
+$side-nav-list-margin: em-calc(0 0 0 0);
+$side-nav-font-size: em-calc(16);
+$side-nav-padding: em-calc(0);
 
 // Comment out this import if you don't want to use normalize
 @import "normalize";
@@ -71,20 +74,26 @@ $body-bg: image-url('new-pattern.png');
 	padding-bottom: 5px;
 }
 
-.top-bar-section li a:hover {
-	background-color: purple !important;
-}
-
 @function menu-item-width($total-width, $num-items) {
 	@return $total-width / $num-items;
 }
 
 @media #{$topbar-media-query} {
-	.top-bar-section ul li {
+	.top-bar-section ul > li {
 		text-align: center;
 		width: menu-item-width(100%, 5);
-		padding-left: 5px;
-		padding-right: 5px;
+		border-right: lighten($topbar-bg, 10%) 1px solid;
+		border-left: lighten($topbar-bg, 10%) 1px solid;
+
+		a:hover {
+			background-color: cyan !important;
+		}
+		&:first-child {
+			border-left: none;
+		}
+		&:last-child {
+			border-right: none;
+		}
 	}
 	.top-bar-section ul, .top-bar {
 		background: transparent;
@@ -92,3 +101,12 @@ $body-bg: image-url('new-pattern.png');
 }
 
 li.selected > a { background-color: #fab !important; }
+
+.side-nav li {
+	//line-height: 200%;
+	padding: 10px;
+	&.active {
+		background-color: cadetblue;
+	}
+}
+
