--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -1,6 +1,6 @@
 {% extends "website/base.html" %}
 
-{% load i18n static %}
+{% load i18n static cms_tags %}
 
 {% block extra_css %}
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
@@ -14,7 +14,7 @@
 				<li {% if active_payment %}class="active"{% endif %}><a href="{% url "account_payment" %}"><i class="icon-fixed-width icon-usd"></i> {% trans "Pagamento" %}</a></li>
 				<li {% if active_courses %}class="active"{% endif %}><a href="{% url "account_courses" %}"><i class="icon-fixed-width icon-pencil"></i> {% trans "Minicursos" %}</a></li>
 				{% if user.is_staff %}
-					<li><a href="#"><i class="icon-fixed-width icon-cog"></i> {% trans "Administração" %}</a></li>
+					<li><a href="{% page_url "admin" %}"><i class="icon-fixed-width icon-cog"></i> {% trans "Administração" %}</a></li>
 				{% endif %}
 			</ul>
 		</div>
