--- a/management/templates/management/companies.html
+++ b/management/templates/management/companies.html
@@ -1,1 +1,31 @@
 {% extends "management/base.html" %}
+
+{% block user_content %}
+<div class="row">
+	<div class="large-6 columns">
+		<p>Quantidade de apoios: {{partnerships.count}}</p>
+		<p>Quantidade de patrocínios: {{sponsorships.count}}</p>
+	</div>
+	<div class="large-6 columns">
+		<a href="{% url "management_companies_add" %}" class="button expand"><i class="icon-plus"></i> Adicionar empresa</a>
+	</div>
+</div>
+<div class="row">
+	{% for company in companies %}
+		<div class="large-6 columns">
+			<div class="panel">
+				<ul class="large-block-grid-2">
+					<style>
+						.large-block-grid-2 img { height: 100px; }
+					</style>
+					<li><img src="{{company.logo.url}}"></li>
+					<li>
+						<p>{{company.name}}</p>
+						<p>{{company.get_type_display}}</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+	{% endfor %}
+</div>
+{% endblock %}
