--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -110,3 +110,8 @@ li.selected > a { background-color: #fab !important; }
 	}
 }
 
+span.align-center img {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
