--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -3,17 +3,17 @@
 {% load i18n static %}
 
 {% block extra_css %}
-	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 {% endblock %}
 
 {% block base_content %}
 	<div class="row">
 		<div class="large-3 columns">
 			<ul class="side-nav">
-				<li {% if active_overview %}class="active"{% endif %}><a href="{% url "management_overview" %}"><i class="icon-fixed-width icon-home"></i> {% trans "Visão geral" %}</a></li>
-				<li {% if active_lectures %}class="active"{% endif %}><a href="{% url "management_lectures" %}"><i class="icon-fixed-width icon-comment"></i> {% trans "Palestras" %}</a></li>
-				<li {% if active_courses %}class="active"{% endif %}><a href="{% url "management_courses" %}"><i class="icon-fixed-width icon-pencil"></i> {% trans "Minicursos" %}</a></li>
-				<li {% if active_companies %}class="active"{% endif %}><a href="{% url "management_companies" %}"><i class="icon-fixed-width icon-building"></i> {% trans "Empresas" %}</a></li>
+				<li {% if active_overview %}class="active"{% endif %}><a href="{% url "management_overview" %}"><i class="fa fa-fw fa-home"></i> {% trans "Visão geral" %}</a></li>
+				<li {% if active_lectures %}class="active"{% endif %}><a href="{% url "management_lectures" %}"><i class="fa fa-fw fa-comment"></i> {% trans "Palestras" %}</a></li>
+				<li {% if active_courses %}class="active"{% endif %}><a href="{% url "management_courses" %}"><i class="fa fa-fw fa-pencil"></i> {% trans "Minicursos" %}</a></li>
+				<li {% if active_companies %}class="active"{% endif %}><a href="{% url "management_companies" %}"><i class="fa fa-fw fa-building-o"></i> {% trans "Empresas" %}</a></li>
 			</ul>
 		</div>
 		<div class="large-9 columns">
