--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -10,10 +10,31 @@
 	<div class="row">
 		<div class="large-3 columns">
 			<ul class="side-nav">
-				<li {% if active_overview %}class="active"{% endif %}><a href="{% url "management_overview" %}"><i class="fa fa-fw fa-home"></i> {% trans "Visão geral" %}</a></li>
-				<li {% if active_lectures %}class="active"{% endif %}><a href="{% url "management_lectures" %}"><i class="fa fa-fw fa-comment"></i> {% trans "Palestras" %}</a></li>
-				<li {% if active_courses %}class="active"{% endif %}><a href="{% url "management_courses" %}"><i class="fa fa-fw fa-pencil"></i> {% trans "Minicursos" %}</a></li>
-				<li {% if active_companies %}class="active"{% endif %}><a href="{% url "management_companies" %}"><i class="fa fa-fw fa-building-o"></i> {% trans "Empresas" %}</a></li>
+				<li {% if active_overview %}class="active"{% endif %}>
+					<a href="{% url "management_overview" %}">
+						<i class="fa fa-fw fa-home"></i> {% trans "Visão geral" %}
+					</a>
+				</li>
+				<li {% if active_lectures %}class="active"{% endif %}>
+					<a href="{% url "management_lectures" %}">
+						<i class="fa fa-fw fa-comment"></i> {% trans "Palestras" %}
+					</a>
+				</li>
+				<li {% if active_courses %}class="active"{% endif %}>
+					<a href="{% url "management_courses" %}">
+						<i class="fa fa-fw fa-pencil"></i> {% trans "Minicursos" %}
+					</a>
+				</li>
+				<li {% if active_users %}class="active"{% endif %}>
+					<a href="{% url "management_users" %}">
+						<i class="fa fa-fw fa-users"></i> {% trans "Usuários" %}
+					</a>
+				</li>
+				<li {% if active_companies %}class="active"{% endif %}>
+					<a href="{% url "management_companies" %}">
+						<i class="fa fa-fw fa-building-o"></i> {% trans "Empresas" %}
+					</a>
+				</li>
 			</ul>
 		</div>
 		<div class="large-9 columns">
