--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -449,7 +449,7 @@ meta.foundation-mq-large {
 /* line 297, ../../../../../../.gem/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/foundation/components/_global.scss */
 html,
 body {
-  font-size: 100%;
+  font-size: 16px;
 }
 
 /* line 300, ../../../../../../.gem/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/foundation/components/_global.scss */
@@ -7303,62 +7303,72 @@ a.th {
   max-width: 800px;
 }
 
-/* line 66, ../sass/app.scss */
+/* line 67, ../sass/app.scss */
 .hero {
   background-color: #fab;
   padding: 20px;
   margin: 20px 0;
 }
 
-/* line 72, ../sass/app.scss */
+/* line 73, ../sass/app.scss */
 .sponsor {
   padding-top: 5px;
   padding-bottom: 5px;
 }
 
 @media only screen and (min-width: 940px) {
-  /* line 82, ../sass/app.scss */
+  /* line 83, ../sass/app.scss */
   .top-bar-section ul > li {
     text-align: center;
     width: 20%;
     border-right: #2b2b2b 1px solid;
     border-left: #2b2b2b 1px solid;
   }
-  /* line 88, ../sass/app.scss */
+  /* line 89, ../sass/app.scss */
   .top-bar-section ul > li a:hover {
     background-color: cyan !important;
   }
-  /* line 91, ../sass/app.scss */
+  /* line 92, ../sass/app.scss */
   .top-bar-section ul > li:first-child {
     border-left: none;
   }
-  /* line 94, ../sass/app.scss */
+  /* line 95, ../sass/app.scss */
   .top-bar-section ul > li:last-child {
     border-right: none;
   }
 
-  /* line 98, ../sass/app.scss */
+  /* line 99, ../sass/app.scss */
   .top-bar-section ul, .top-bar {
     background: transparent;
   }
 }
-/* line 103, ../sass/app.scss */
+/* line 104, ../sass/app.scss */
 li.selected > a {
   background-color: #fab !important;
 }
 
-/* line 105, ../sass/app.scss */
+/* line 106, ../sass/app.scss */
 .side-nav li {
   padding: 10px;
 }
-/* line 108, ../sass/app.scss */
-.side-nav li.active {
-  background-color: cadetblue;
-}
 
-/* line 113, ../sass/app.scss */
+/* line 114, ../sass/app.scss */
 span.align-center img {
   margin-left: auto;
   margin-right: auto;
   display: block;
+}
+
+/* line 120, ../sass/app.scss */
+.user-content h1 {
+  background-image: -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, #ffffff), color-stop(100%, #015079));
+  background-image: -webkit-linear-gradient(right, #ffffff, #015079);
+  background-image: -moz-linear-gradient(right, #ffffff, #015079);
+  background-image: -o-linear-gradient(right, #ffffff, #015079);
+  background-image: linear-gradient(right, #ffffff, #015079);
+}
+
+/* line 124, ../sass/app.scss */
+#add-place-map {
+  height: 380px;
 }
