início de eventos e tabela de programação

--- a/management/templates/management/events.html
+++ b/management/templates/management/events.html
@@ -1,9 +1,39 @@
 {% extends "management/base.html" %}
 
+{% load sekizai_tags i18n %}
+
 {% block user_content %}
 <div class="row">
-	<div class="large-6 columns">
-		<p>Eveeeeentos, eventos de grátis pessoal</p>
+	<h1>Eventos</h1>
+	<div class="large-12 columns">
+		<table class="schedule">
+			<thead>
+				<tr>
+					<th></th>
+					<th>{% trans "Segunda feira" %}</th>
+					<th>{% trans "Terça feira" %}</th>
+					<th>{% trans "Quarta feira" %}</th>
+					<th>{% trans "Quinta feira" %}</th>
+					<th>{% trans "Sexta feira" %}</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+			</tbody>
+		</table>
 	</div>
 </div>
 {% endblock %}
