--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -119,8 +119,19 @@ span.align-center img {
 
 .user-content h1 {
 	@include background-image(linear-gradient(right, white, #015079));
+	@extend .text-right;
 }
 
 #add-place-map {
 	height: 380px;
+}
+
+.schedule {
+	width: 100%;
+	th {
+		width: 16.666666%;
+	}
+	td {
+		text-align: center;
+	}
 }
