--- a/management/templates/management/events.html
+++ b/management/templates/management/events.html
@@ -1,37 +1,49 @@
 {% extends "management/base.html" %}
 
-{% load sekizai_tags i18n %}
+{% load sekizai_tags i18n mathfilters %}
 
 {% block user_content %}
 <div class="row">
 	<h1>Eventos</h1>
+	<div class="large-6 columns">
+		<a class="button" href="{% url "management_events_add" %}">Adicionar evento</a>
+	</div>
+</div>
+<div class="row">
 	<div class="large-12 columns">
 		<table class="schedule">
 			<thead>
 				<tr>
 					<th></th>
-					<th>{% trans "Segunda feira" %}</th>
-					<th>{% trans "Terça feira" %}</th>
-					<th>{% trans "Quarta feira" %}</th>
-					<th>{% trans "Quinta feira" %}</th>
-					<th>{% trans "Sexta feira" %}</th>
+					<th>{% trans "Segunda" %}</th>
+					<th>{% trans "Terça" %}</th>
+					<th>{% trans "Quarta" %}</th>
+					<th>{% trans "Quinta" %}</th>
+					<th>{% trans "Sexta" %}</th>
+					<th>{% trans "Sábado" %}</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
-				<tr> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> <td>oi</td> </tr>
+				<tr>
+					<td class="timeslots">
+						{% for t in timeslots %}
+							<div class="schedule-timeslot">{{t}}</div>
+						{% endfor %}
+					</td>
+					{% for day in days %}
+						<td class="day-schedule">
+							{% for event in day %}
+								{# olhar no css qual o tamanho da linha se for alterar aqui #}
+								<a href="{% url "management_events_edit" event.obj.pk %}">
+									<div class="schedule-event {{event.type}}"
+										style="left: 0; right: 0; top: {{event.start_slot|mul:20}}px; height: {{event.slots|mul:20}}px;">
+										{{event.name}}
+									</div>
+								</a>
+							{% endfor %}
+						</td>
+					{% endfor %}
+				</tr>
 			</tbody>
 		</table>
 	</div>
