--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -129,9 +129,52 @@ span.align-center img {
 .schedule {
 	width: 100%;
 	th {
-		width: 16.666666%;
-	}
-	td {
 		text-align: center;
 	}
+	td {
+		width: 14.285714285714286%;
+		text-align: center;
+	}
+}
+
+.day-schedule {
+	position: relative;
+
+	border: #ddd 1px dotted;
+	//border-right: #ddd 1px dotted;
+}
+
+.schedule-event {
+	@include border-radius(5px);
+
+	position: absolute;
+
+	&.neutro {
+		background-color: lightgray;
+	}
+
+	&.minicurso {
+		background-color: lightgreen;
+	}
+}
+
+.timeslots {
+	padding: 0;
+
+	.schedule-timeslot {
+		height: 20px;
+		line-height: 20px;
+
+		&:nth-child(even) {
+			border-bottom: 1px lightgray solid;
+		}
+
+		&:first-child {
+			border-top: 1px lightgray solid;
+		}
+	}
+}
+
+.picker__footer button {
+	color: black;
 }
