--- a/management/templates/management/events_change.html
+++ b/management/templates/management/events_change.html
@@ -36,7 +36,10 @@
 			{% include "management/render_field.html" with field=form.end_date width="large-6" only %}
 			{% include "management/render_field.html" with field=form.end_time width="large-6" only %}
 		</div>
-		<input class="button" type="submit" value="{% trans "Salvar" %}">
+		<input class="button right" type="submit" value="{% trans "Salvar" %}">
+		{% if form.instance.pk %}
+			<a href="{% url "management_events_delete" form.instance.pk %}" class="button left alert" onclick="return confirm('Tem certeza que deseja apagar?');">{% trans "Apagar" %}</a>
+		{% endif %}
 	</fieldset>
 </form>
 {% endblock %}
