--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -1,4 +1,4 @@
-{% load cms_tags sekizai_tags static menu_tags %}
+{% load cms_tags sekizai_tags static menu_tags semcomp %}
 <!doctype html>
 <html>
 	<head>
@@ -37,24 +37,7 @@
 
 			<!-- Sponsors -->
 			<hr>
-			<div class="row">
-				<h2>Patrocinadores</h2>
-			</div>
-			<div class="row">
-				{% for i in "1234567" %}
-					<div class="sponsor small-6 large-3 large-uncentered columns">
-						<img src="http://placehold.it/250x150&text=sponsor+{{i}}">
-					</div>
-				{% endfor %}
-			</div>
-			<div class="row">
-				<h2>Apoio</h2>
-				{% for i in "abcde" %}
-					<div class="sponsor small-6 large-3 large-uncentered columns">
-						<img src="http://placehold.it/250x150&text=sponsor+{{i}}">
-					</div>
-				{% endfor %}
-			</div>
+			{% render_sponsors %}
 			<footer>
 				<hr>
 				{% placeholder footer %}
