nome de {% block %} errado

--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -2,7 +2,7 @@
 
 {% load i18n static cms_tags %}
 
-{% block extra_css %}
+{% block extracss %}
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 {% endblock %}
 
