--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -7318,22 +7318,22 @@ a.th {
 
 @media only screen and (min-width: 940px) {
   /* line 83, ../sass/app.scss */
-  .top-bar-section ul > li {
+  .top-bar-section > ul > li {
     text-align: center;
     width: 20%;
     border-right: #2b2b2b 1px solid;
     border-left: #2b2b2b 1px solid;
   }
   /* line 89, ../sass/app.scss */
-  .top-bar-section ul > li a:hover {
+  .top-bar-section > ul > li a:hover {
     background-color: cyan !important;
   }
   /* line 92, ../sass/app.scss */
-  .top-bar-section ul > li:first-child {
+  .top-bar-section > ul > li:first-child {
     border-left: none;
   }
   /* line 95, ../sass/app.scss */
-  .top-bar-section ul > li:last-child {
+  .top-bar-section > ul > li:last-child {
     border-right: none;
   }
 
