tema do blog pseudo ajustado ao site

--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -7433,3 +7433,8 @@ span.align-center img {
 .picker__footer button {
   color: black;
 }
+
+/* line 182, ../sass/app.scss */
+form.search-form {
+  margin: 0;
+}
