--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -18,7 +18,7 @@
 			{% block header %}{% endblock %}
 
 			<div class="row">
-				<nav class="top-bar">
+				<nav class="top-bar" data-topbar>
 					<ul class="title-area">
 						<li class="name">
 							<h1 class="show-for-small"><a href="{% page_url "home" %}">Semcomp</a></h1>
@@ -44,35 +44,12 @@
 			</footer>
 		</section>
 		{% block masterjs %}
-			<script>
-				var jquery_url = "//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js";
-				var zepto_url = "{% static "js/vendor/zepto.js" %}";
-				document.write('<script src="'
-					+ ('__proto__' in {} ? zepto_url : jquery_url)
-					+ '"><\/script>'
-				);
-			</script>
 		{% endblock %}
 		{% render_block "js" postprocessor "compressor.contrib.sekizai.compress" %}
 		{% addtoblock "js" %}
-			<script src="{% static "js/vendor/custom.modernizr.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.tooltips.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.alerts.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.orbit.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.clearing.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.dropdown.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.joyride.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.section.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.placeholder.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.cookie.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.reveal.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.topbar.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.magellan.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.forms.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.abide.js" %}"></script>
-			<script src="{% static "js/foundation/foundation.interchange.js" %}"></script>
-
+			<script src="{% static "bower_components/modernizr/modernizr.js" %}"></script>
+			<script src="{% static "bower_components/jquery/jquery.js" %}"></script>
+			<script src="{% static "bower_components/foundation/js/foundation.min.js" %}"></script>
 			<script>
 				$(document).foundation();
 			</script>
